<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="application_name">Money Manager Ex</string>
    <string name="application_definition">A simple and easy-to-use application to manage personal finances, bank accounts, family budget, and so on.</string>
    <string name="application_credits">MoneyManagerEx for Android Project uses ActionBarSherlock library</string>
    <string name="application_license">Open source licenses</string>
    <string name="db_insert_failed">Inserting data failed</string>
    <string name="db_delete_failed">Deleting data failed</string>
    <string name="db_update_failed">Updating data failed</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_manage">Manage</string>
    <string name="dropbox_link">Link to Dropbox</string>
    <string name="dropbox_unlink">Unlink from Dropbox</string>
    <string name="dropbox_syncProgress">Synchronizing file. Please wait…</string>
    <string name="dropbox_downloadProgress">Downloading file from Dropbox. Please wait…</string>
    <string name="dropbox_uploadProgress">Uploading file to Dropbox. Please wait…</string>
    <string name="dropbox_linkedFile">File Dropbox</string>
    <string name="preferences_general">General</string>
    <string name="preferences_dispaly">Look &#38; Feel</string>
    <string name="preferences_behaviour">Behaviour</string>
    <string name="base_currency">Base currency</string>
    <string name="base_currency_changed">Base currency changed</string>
    <string name="base_currency_change_notification">The base currency has been changed. Please update the currency exchange rates to get correct amounts in the new base currency.</string>
    <string name="view_accounts_opened">View open accounts</string>
    <string name="if_not_selected_willShowAllAccounts">If not selected will show all accounts</string>
    <string name="view_accounts_favorites">View favourite accounts</string>
    <string name="version">Version</string>
    <string name="build">Build</string>
    <string name="path">Database path</string>
    <string name="database_version">Database version</string>
    <string name="title_show_tutorial">Show tutorial</string>
    <string name="summary_show_tutorial">Show tutorial on the next run?</string>
    <string name="preferences_behaviour_focus_filter_title">Filter in selectors</string>
    <string name="preferences_behaviour_focus_filter_summary">Focus on filter in selectors. Otherwise browse.</string>
    <string name="pref_auto_sync_via_wifi">Auto-sync only on WiFi</string>
    <string name="pref_auto_sync_via_wifi_summary">Auto-synchronize only when on WiFi connection.</string>
    <string name="account">Account</string>
    <string name="account_list">Account List</string>
    <string name="account_empty_list">No accounts have been found. To create one, tap the green plus button.</string>
    <string name="account_balance">Account Balance</string>
    <string name="account_reconciled_balance">Reconciled Balance</string>
    <string name="delete_account">Delete Account</string>
    <string name="account_name">Account name</string>
    <string name="account_type">Account type</string>
    <string name="account_number">Account number</string>
    <string name="account_held_at">Held at</string>
    <string name="account_status">Account status</string>
    <string name="favourite_account">Favourite account</string>
    <string name="select_currency">Select currency</string>
    <string name="checking">Checking</string>
    <string name="investment">Investment</string>
    <string name="investment_accounts">Investment Accounts</string>
    <string name="term">Term</string>
    <string name="db_account_insert_failed">Error inserting account</string>
    <string name="db_account_update_failed">Error updating account</string>
    <string name="error_currency_not_selected">Currency is required</string>
    <string name="error_saving_default_currency">Error saving the default currency</string>
    <string name="error_initialbal_empty">Account initial balance is required</string>
    <string name="error_accountname_empty">Account name is required</string>
    <string name="error_accounttype_empty">Account type is required</string>
    <string name="error_status_empty">Account status is required</string>
    <string name="error_amount_must_be_positive">Amount must be positive. The sign is determined by Transaction Type.</string>
    <string name="payee_name">Payee name</string>
    <string name="edit_payeeName">Edit Payee</string>
    <string name="delete_payee">Delete Payee</string>
    <string name="payee">Payee</string>
    <string name="select_payee">Select Payee</string>
    <string name="payee_empty_list">No payee has been found. To create one, tap the green plus button.</string>
    <string name="from">From</string>
    <string name="db_payee_update_failed">Updating payee failed</string>
    <string name="category">Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="category_empty_list">No category has been found. To create one, tap the green plus button.</string>
    <string name="select_category">Select Category</string>
    <string name="add_category">Add Category</string>
    <string name="add_subcategory">Add Subcategory</string>
    <string name="edit_categoryName">Edit Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="currency_name">Currency name</string>
    <string name="currency_symbol">Currency symbol</string>
    <string name="delete_currency">Delete Currency</string>
    <string name="unit_name">Unit name</string>
    <string name="cents_name">Cents name</string>
    <string name="prefix_symbol">Prefix symbol</string>
    <string name="suffix_symbol">Suffix symbol</string>
    <string name="decimal_char">Decimal char</string>
    <string name="group_char">Group char</string>
    <string name="scale">Scale</string>
    <string name="conversion_to_base_rate">Conversion</string>
    <string name="currency_name_empty">Currency name is required</string>
    <string name="amount">Amount</string>
    <string name="total_amount">Total amount</string>
    <string name="deposit">Deposit</string>
    <string name="status">Status</string>
    <string name="status_reconciled">Reconciled</string>
    <string name="status_void">Void</string>
    <string name="status_follow_up">Follow-up</string>
    <string name="status_duplicate">Duplicate</string>
    <string name="status_none">None</string>
    <string name="transfer">Transfer</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_status">Status</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="db_checking_insert_failed">Inserting transaction failed</string>
    <string name="db_checking_update_failed">Updating transaction failed</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="new_transaction">New transaction</string>
    <string name="error_payee_not_selected">Payee is required</string>
    <string name="error_toaccount_not_selected">To Account is required</string>
    <string name="error_category_not_selected">Category is required</string>
    <string name="error_totamount_empty">Total amount is required</string>
    <string name="error_transfer_to_same_account">The two accounts for the transfer must be distinct</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="confirmDelete">Are you sure you want to delete?</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="logo">Logo</string>
    <string name="new_edit_transaction">New/Edit Transaction</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="summary">Summary</string>
    <string name="sync">Sync</string>
    <string name="synchronize">Synchronize</string>
    <string name="open">Open</string>
    <string name="user">User</string>
    <string name="upload">Upload</string>
    <string name="username">User Name</string>
    <string name="to">To</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="access_info">Access info</string>
    <string name="initial_balance">Initial balance</string>
    <string name="notes">Notes</string>
    <string name="closed">Closed</string>
    <string name="new_edit_currency">New/Edit Currency</string>
    <string name="theme_application">Theme</string>
    <string name="theme_holo">Material Dark</string>
    <string name="theme_light">Material Light</string>
    <string name="close_application">Close application</string>
    <string name="question_close_application">Do you want to close the application?</string>
    <string name="error_intent_pick_file">No Activity found to handle Intent Pick File</string>
    <string name="attention">Attention</string>
    <string name="payee_can_not_deleted">The selected payee can not be deleted because it is referenced</string>
    <string name="account_can_not_deleted">The selected account can not be deleted because it is referenced</string>
    <string name="currency_can_not_deleted">The selected currency can not be deleted because it is referenced</string>
    <string name="category_can_not_deleted">The selected category can not be deleted because it is referenced</string>
    <string name="all_transaction">All transactions</string>
    <string name="today">Today</string>
    <string name="last7days">Last 7 days</string>
    <string name="last15days">Last 2 weeks</string>
    <string name="current_month">Current month</string>
    <string name="current_year">Current year</string>
    <string name="future_transactions">Future transactions</string>
    <string name="show_transaction">Show Transaction</string>
    <string name="changelog">Changelog</string>
    <string name="transaction_number">Transaction number</string>
    <string name="widget_summary">Summary</string>
    <string name="widget_all_accounts">All Accounts</string>
    <string name="widget_add_transaction">Add Transaction</string>
    <string name="none">None</string>
    <string name="once">Once</string>
    <string name="weekly">Weekly</string>
    <string name="bi_weekly">Bi-Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="bi_monthly">Bi-Monthly</string>
    <string name="quaterly">Quaterly</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="difference">Difference</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_report_income_vs_expenses">Income Vs Expenses</string>
    <string name="all_time">All Time</string>
    <string name="last_month">Previous Month</string>
    <string name="last30days">Last 30 Days</string>
    <string name="last_year">Previous Year</string>
    <string name="export_data_to_csv">Export data to CSV file</string>
    <string name="donate">Donate</string>
    <string name="menu_open_database">Open database</string>
    <string name="amount_greater_or_equal">Amount greater or equal</string>
    <string name="amount_less_or_equal">Amount less or equal</string>
    <string name="time_frame">Time Frame</string>
    <string name="custom_dates">Custom Dates</string>
    <string name="value">Value</string>
    <string name="asset_class_name">Asset Class name</string>
    <string name="allocation">Allocation</string>
    <string name="current_allocation">Current Allocation</string>
    <string name="current_value">Current Value</string>
</resources>