<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012 The Android Money Manager Ex Project
  
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 2
  of the License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with this program; if not, write to the Free Software
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_open_database"
        android:icon="?attr/ic_action_folder_open"
        android:showAsAction="always|withText"
        android:title="@string/menu_open_database"/>
    
    <item
        android:id="@+id/menu_add_transaction_account"
        android:title="@string/new_transaction"
        android:icon="?attr/ic_action_add"
        android:showAsAction="ifRoom|withText" 
        android:visible="false" />
    
    <item
        android:id="@+id/menu_search_transaction"
        android:icon="?attr/ic_action_search"
        android:showAsAction="ifRoom|withText"
        android:title="@string/search"/>

    <item
        android:id="@+id/menu_export_to_csv"
        android:title="@string/export_data_to_csv"
        android:visible="false" />
    
    <group android:id="@+id/menu_group_main" >
        <item
            android:id="@+id/menu_action_main"
            android:title="@string/menu_manage">
            <menu>
                <item
                    android:id="@+id/menu_account"
                    android:title="@string/account"/>
                <item
                    android:id="@+id/menu_category"
                    android:title="@string/category"/>
                <item
                    android:id="@+id/menu_currency"
                    android:title="@string/currency"/>
                <item
                    android:id="@+id/menu_payee"
                    android:title="@string/payee"/>
                <item
                    android:id="@+id/menu_repeating_transaction"
                    android:title="@string/repeating_transaction"/>
            </menu>
        </item>
    </group>
    <group android:id="@+id/menu_group_reports" >
        <item
            android:id="@+id/menu_reports"
            android:title="@string/menu_reports">
            <menu>
                <item
                    android:id="@+id/menu_report_categories"
                    android:title="@string/category"/>
                <item
                    android:id="@+id/menu_report_payees"
                    android:title="@string/payee"/>
                <item
                    android:id="@+id/menu_report_income_vs_expenses"
                    android:title="@string/menu_report_income_vs_expenses"/>
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"/>
    <item
        android:id="@+id/menu_donate"
        android:title="@string/donate"/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/about"/>
    <item
        android:id="@+id/menu_exit"
        android:title="@string/menu_exit"/>

</menu>