<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_period"
        android:icon="@drawable/ic_menu_today"
        android:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/menu_current_month"
                    android:title="@string/current_month"/>
                <item
                    android:id="@+id/menu_last_month"
                    android:title="@string/last_month"/>
                <item
                    android:id="@+id/menu_last_30_days"
                    android:title="@string/last30days"/>
                <item
                    android:id="@+id/menu_current_year"
                    android:title="@string/current_year"/>
                <item
                    android:id="@+id/menu_last_year"
                    android:title="@string/last_year"/>
                <item
                    android:id="@+id/menu_all_time"
                    android:title="@string/all_time"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_option1"
        android:visible="false">
        <menu>
        </menu>
    </item>

</menu>