<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_none"
        android:alphabeticShortcut="U"
        android:icon="?attr/ic_action_help"
        android:showAsAction="always|withText"
        android:title="@string/status_none"/>
    <item
        android:id="@+id/menu_reconciled"
        android:alphabeticShortcut="R"
        android:icon="?attr/ic_action_foursquare"
        android:showAsAction="always|withText"
        android:title="@string/status_reconciled"/>
    <item
        android:id="@+id/menu_follow_up"
        android:alphabeticShortcut="F"
        android:icon="?attr/ic_action_bell"
        android:showAsAction="ifRoom|withText"
        android:title="@string/status_follow_up"/>
    <item
        android:id="@+id/menu_duplicate"
        android:alphabeticShortcut="D"
        android:icon="?attr/ic_action_copy"
        android:showAsAction="ifRoom|withText"
        android:title="@string/status_duplicate"/>
    <item
        android:id="@+id/menu_void"
        android:alphabeticShortcut="V"
        android:icon="?attr/ic_action_halt"
        android:showAsAction="ifRoom|withText"
        android:title="@string/status_void"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="?attr/ic_action_trash"
        android:showAsAction="ifRoom|withText"
        android:title="@string/delete_transaction"/>

</menu>