<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/textViewYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="5dp"
        android:layout_column="0"
        android:text="@string/year" />

    <TextView
        android:id="@+id/textViewMonth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_column="1"
        android:layout_weight="1"
        android:text="@string/month" />

    <TextView
        android:id="@+id/textViewIncome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_column="2"
        android:layout_weight="2"
        android:text="@string/income" />

    <TextView
        android:id="@+id/textViewExpenses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_column="3"
        android:layout_weight="2"
        android:text="@string/expenses" />
    
    <TextView
        android:id="@+id/textViewDifference"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_column="4"
        android:layout_weight="2"
        android:textStyle="bold"
        android:text="@string/difference" />

</TableRow>