<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2012-2015 The Android Money Manager Ex Project Team
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal" >

    <!-- asset class name -->
    <com.money.manager.ex.view.RobotoTextView
        android:id="@+id/assetClassTextView"
        android:layout_width="0dp"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/asset_class_name" />

    <!-- set allocation -->
    <com.money.manager.ex.view.RobotoTextView
        android:id="@+id/allocationTextView"
        android:layout_width="wrap_content"
        android:minWidth="30dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|end"
        android:gravity="center_vertical|end"
        android:text="@string/allocation" />

    <!-- set value -->
    <com.money.manager.ex.view.RobotoTextView
        android:id="@+id/valueTextView"
        android:layout_width="wrap_content"
        android:minWidth="65dp"
        android:paddingStart="1dp"
        android:paddingLeft="1dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="center_vertical|end"
        android:text="@string/value" />

    <!-- current allocation -->
    <com.money.manager.ex.view.RobotoTextView
        android:id="@+id/currentAllocationTextView"
        android:layout_width="wrap_content"
        android:minWidth="30dp"
        android:paddingStart="1dp"
        android:paddingLeft="1dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|end"
        android:gravity="center_vertical|end"
        android:text="@string/current_allocation" />

    <!-- current value -->
    <com.money.manager.ex.view.RobotoTextView
        android:id="@+id/currentValueTextView"
        android:layout_width="wrap_content"
        android:minWidth="65dp"
        android:paddingStart="1dp"
        android:paddingLeft="1dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|end"
        android:gravity="center_vertical|end"
        android:text="@string/current_value" />

    <!-- difference -->
    <com.money.manager.ex.view.RobotoTextView
        android:id="@+id/differenceTextView"
        android:layout_width="wrap_content"
        android:minWidth="65dp"
        android:paddingStart="1dp"
        android:paddingLeft="1dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="center_vertical|end"
        android:text="@string/difference" />

</LinearLayout>